@@ -3199,9 +3199,7 @@ GetAllVirtualEvents(
     hPtr = Tcl_FirstHashEntry(&vetPtr->nameTable, &search);
     for ( ; hPtr != NULL; hPtr = Tcl_NextHashEntry(&search)) {
 	Tcl_DStringSetLength(&ds, 0);
-	Tcl_DStringAppend(&ds, "<<", 2);
 	Tcl_DStringAppend(&ds, Tcl_GetHashKey(hPtr->tablePtr, hPtr), -1);
-	Tcl_DStringAppend(&ds, ">>", 2);
 	Tcl_AppendElement(interp, Tcl_DStringValue(&ds));
     }
 
@@ -3919,7 +3917,6 @@ GetVirtualEventUid(
     Tcl_Interp *interp,
     char *virtString)
 {
-    Tk_Uid uid;
     size_t length;
 
     length = strlen(virtString);
@@ -3930,11 +3927,8 @@ GetVirtualEventUid(
 		"\" is badly formed", NULL);
 	return NULL;
     }
-    virtString[length - 2] = '\0';
-    uid = Tk_GetUid(virtString + 2);
-    virtString[length - 2] = '>';
 
-    return uid;
+    return Tk_GetUid(virtString);
 }
 
 /*
@@ -4140,7 +4134,7 @@ ParseEventDescription(
 				 * event string. */
     unsigned long *eventMaskPtr)/* Filled with event mask of matched event. */
 {
-    char *p;
+    char *p, c;
     unsigned long eventMask;
     int count, eventFlags;
 #define FIELD_SIZE 48
@@ -4227,11 +4221,12 @@ ParseEventDescription(
 	    count = 0;
 	    goto done;
 	}
-	*p = '\0';
+	c = p[2];
+	p[2] = '\0';
 	patPtr->eventType = VirtualEvent;
 	eventMask = VirtualEventMask;
-	patPtr->detail.name = Tk_GetUid(field);
-	*p = '>';
+	patPtr->detail.name = Tk_GetUid(field - 2);
+	p[2] = c;
 
 	p += 2;
 	goto end;
@@ -4446,9 +4441,7 @@ GetPatternString(
 	 */
 
 	if (patPtr->eventType == VirtualEvent) {
-	    Tcl_DStringAppend(dsPtr, "<<", 2);
 	    Tcl_DStringAppend(dsPtr, patPtr->detail.name, -1);
-	    Tcl_DStringAppend(dsPtr, ">>", 2);
 	    continue;
 	}
 
